Infrastructure/modules/vpc/main.tf
# resource "aws_vpc" "this" {
#   cidr_block           = var.cidr_block
#   enable_dns_hostnames = true
#   tags = merge(var.tags, { Name = "${var.project}-${var.env}-vpc" })
# }

# resource "aws_subnet" "public" {
#   for_each = var.public_subnets

#   vpc_id                  = aws_vpc.this.id
#   cidr_block              = each.value
#   availability_zone       = each.key
#   map_public_ip_on_launch = true

#   tags = merge(var.tags, { Name = "${var.project}-${var.env}-${each.key}" })
# }


# # PRIVATE SUBNETS
# ###########################
# resource "aws_subnet" "private" {
#   for_each = var.private_subnets

#   vpc_id                  = aws_vpc.this.id
#   cidr_block              = each.value
#   availability_zone       = each.key
#   map_public_ip_on_launch = false

#   tags = merge(
#     var.tags,
#     { Name = "${var.project}-${var.env}-${each.key}-private" }
#   )
# }



# ////intenet gateway?//////////



# resource "aws_internet_gateway" "igw" {
#     vpc_id = aws_vpc.this.id

#   tags = merge(var.tags, {
#     Name = "${var.project}-${var.env}-igw"
#   })
  
# }






# ///////Create Elastic IP for NAT Gateway?///


# resource "aws_eip" "nat" {
#   domain = "vpc"

#   tags = merge(var.tags, {
#     Name = "${var.project}-${var.env}-eip"
#   })
# }


# #//////////////// Create NAT Gateway in first public subnet//////////////

# resource "aws_nat_gateway" "this" {
#   allocation_id = aws_eip.nat.id
#   subnet_id     = element(values(aws_subnet.public), 0).id

#   tags = merge(var.tags, {
#     Name = "${var.project}-${var.env}-nat"
#   })

#   depends_on = [aws_internet_gateway.igw]
# }



# # //////////////////////////Public Route Table////////////////////////////////

# resource "aws_route_table" "public" {
#   vpc_id = aws_vpc.this.id

#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.igw.id
#   }

#   tags = merge(var.tags, {
#     Name = "${var.project}-${var.env}-public-rt"
#   })
# }


# /////////////////// Private Route Table//////////////////////////////////////////////

# resource "aws_route_table" "private" {
#   vpc_id = aws_vpc.this.id

#   route {
#     cidr_block     = "0.0.0.0/0"
#     nat_gateway_id = aws_nat_gateway.this.id
#   }

#   tags = merge(var.tags, {
#     Name = "${var.project}-${var.env}-private-rt"
#   })
# }


# #////////////////////////// Associate Subnets with Route Tables/////////////////////////

# resource "aws_route_table_association" "public_assoc" {
#   for_each       = aws_subnet.public
#   subnet_id      = each.value.id
#   route_table_id = aws_route_table.public.id
# }

# resource "aws_route_table_association" "private_assoc" {
#   for_each       = aws_subnet.private
#   subnet_id      = each.value.id
#   route_table_id = aws_route_table.private.id
# # 






############ VPC ############
resource "aws_vpc" "this" {
  cidr_block           = var.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project}-vpc"
  }
}

############ SUBNETS ############

# Public Subnets
resource "aws_subnet" "public" {
  for_each = {
    for index, az in var.azs :
    az => var.public_subnets[index]
  }

  vpc_id                  = aws_vpc.this.id
  cidr_block              = each.value
  availability_zone       = each.key
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project}-public-${each.key}"
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/elb"                    = "1"
  }
}

# Private Subnets
resource "aws_subnet" "private" {
  for_each = {
    for index, az in var.azs :
    az => var.private_subnets[index]
  }

  vpc_id                  = aws_vpc.this.id
  cidr_block              = each.value
  availability_zone       = each.key
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.project}-private-${each.key}"
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/internal-elb"           = "1"
  }
}

############ INTERNET GATEWAY ############
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.project}-igw"
  }
}

############ NAT + EIP per AZ ############

resource "aws_eip" "nat" {
  for_each = aws_subnet.public

  domain = "vpc"

  tags = {
    Name = "${var.project}-eip-${each.key}"
  }
}

resource "aws_nat_gateway" "this" {
  for_each = aws_subnet.public

  allocation_id = aws_eip.nat[each.key].id
  subnet_id     = each.value.id

  tags = {
    Name = "${var.project}-nat-${each.key}"
  }

  depends_on = [aws_internet_gateway.igw]
}

############ ROUTE TABLES ############

# Public Route Table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.project}-public-rt"
  }
}

# Route associations for public subnets
resource "aws_route_table_association" "public_assoc" {
  for_each       = aws_subnet.public
  subnet_id      = each.value.id
  route_table_id = aws_route_table.public.id
}

# PRIVATE Route Tables (one per AZ)
resource "aws_route_table" "private" {
  for_each = aws_subnet.private

  vpc_id = aws_vpc.this.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.this[each.key].id
  }

  tags = {
    Name = "${var.project}-private-rt-${each.key}"
  }
}

# Route associations for private subnets
resource "aws_route_table_association" "private_assoc" {
  for_each       = aws_subnet.private
  subnet_id      = each.value.id
  route_table_id = aws_route_table.private[each.key].id
}
